--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -9,7 +9,7 @@ SECRET_TOKEN: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 # Documentation including the hash: https://api.rubyonrails.org/classes/ActiveSupport/TimeZone.html
 TIMEZONE: Melbourne
 # Default country for dropdowns etc. See for codes: http://en.wikipedia.org/wiki/ISO_3166-1
-DEFAULT_COUNTRY_CODE: AU
+DEFAULT_COUNTRY_CODE: IT
 # Locale for translation.
 LOCALE: en
 # For multilingual - ENV doesn't have array so pass it as string with commas
@@ -49,7 +49,7 @@ MAILS_FROM: info@query.city
 #DISCOURSE_URL: "https://noticeboard.openfoodnetwork.org.au"
 
 # see: https://developers.google.com/maps/documentation/javascript/get-api-key
-GOOGLE_MAPS_API_KEY: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+GOOGLE_MAPS_API_KEY: AIzaSyBaAtkGMr1cYHdBV2GMHG_f0GPVHRHX_fc
 
 # Stripe Connect details for instance account
 # Find these under 'API keys' and 'Connect' in your Stripe account dashboard -> Account Settings
